--- a/miniprogram/app.json
+++ b/miniprogram/app.json
@@ -2,7 +2,7 @@
   "pages": [
     "pages/index/index",
     "pages/userConsole/userConsole",
-    "pages/storageConsole/storageConsole"
+    "pages/photo/photo"
   ],
   "window": {
     "backgroundColor": "#F6F6F6",
@@ -20,7 +20,7 @@
         {
           "iconPath": "./images/photo.png",
           "selectedIconPath": "./images/photo-active.png",
-          "pagePath": "pages/index/index",
+          "pagePath": "pages/photo/photo",
           "text": "美图"
         },
         {
