--- a/miniprogram/app.json
+++ b/miniprogram/app.json
@@ -3,8 +3,8 @@
     "pages/index/index",
     "pages/userConsole/userConsole",
     "pages/photo/photo",
-    "pages/shareCircle/shareCircle"
-
+    "pages/shareCircle/shareCircle",
+    "pages/modifyPhoto/modify"
   ],
   "window": {
     "backgroundColor": "#F6F6F6",
@@ -15,28 +15,28 @@
   },
   "sitemapLocation": "sitemap.json",
   "style": "v2",
-    "tabBar": {
-      "color": "#999",
-      "selectedColor": "#ffa000",
-      "list": [
-        {
-          "iconPath": "./images/photo.png",
-          "selectedIconPath": "./images/photo-active.png",
-          "pagePath": "pages/photo/photo",
-          "text": "美图"
-        },
-        {
-          "iconPath": "./images/message.png",
-          "selectedIconPath": "./images/message-active.png",
-          "pagePath": "pages/shareCircle/shareCircle",
-          "text": "相友圈"
-        },
-        {
-          "iconPath": "./images/me.png",
-          "selectedIconPath": "./images/me-active.png",
-          "pagePath": "pages/index/index",
-          "text": "我的"
-        }
-      ]
-    }
+  "tabBar": {
+    "color": "#999",
+    "selectedColor": "#ffa000",
+    "list": [
+      {
+        "iconPath": "./images/photo.png",
+        "selectedIconPath": "./images/photo-active.png",
+        "pagePath": "pages/photo/photo",
+        "text": "美图"
+      },
+      {
+        "iconPath": "./images/message.png",
+        "selectedIconPath": "./images/message-active.png",
+        "pagePath": "pages/shareCircle/shareCircle",
+        "text": "相友圈"
+      },
+      {
+        "iconPath": "./images/me.png",
+        "selectedIconPath": "./images/me-active.png",
+        "pagePath": "pages/index/index",
+        "text": "我的"
+      }
+    ]
+  }
 }
