--- a/miniprogram/app.json
+++ b/miniprogram/app.json
@@ -6,7 +6,8 @@
     "pages/shareCircle/shareCircle",
     "pages/modifyPhoto/modify",
     "pages/follow/follow",
-    "pages/fans/fans"
+    "pages/fans/fans",
+    "pages/publish/publish"
   ],
   "window": {
     "backgroundColor": "#F6F6F6",
